--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -32,7 +32,70 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
+.main-container-top {
+  display: flex;
+}
+
+.main-image {
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+}
+
+.main-profile {
+  width: 400px;
+  height: auto;
+  margin: 0 auto;
+  border-radius: 2rem;
+  border-color: aquamarine;
+  border-width: 2px;
+}
+
+.main-slide {
+  width: 1250px;
+  height: auto;
+  margin: 30px auto;
+}
+
+.main-container {
+  display: flex;
+  justify-content: space-between;
+  width: 1250px;
+  margin: 30px auto;
+}
+
+.main-headline {
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.main-item {
+  width:600px;
+  height:320px;
+  border-radius: 8px;
+  border-color: rgb(196, 196, 196);
+  border-width: 1px;
+}
+
+.main-item2 {
+  width:750px;
+  height:370px;
+  border-radius: 8px;
+  border-color: rgb(196, 196, 196);
+  border-width: 1px;
+}
+
+.main-item3 {
+  width:450px;
+  height:370px;
+  border-radius: 8px;
+  border-color: rgb(196, 196, 196);
+  border-width: 1px;
+}
+
