--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -99,3 +99,14 @@
   border-width: 1px;
 }
 
+.header-active {
+  font-weight: 800;
+  color:#6ac5b7;
+}
+
+.color-wood {
+  color:#754a0d;
+}
+
+
+
