--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -100,12 +100,12 @@
 }
 
 .header-active {
-  font-weight: 800;
+  font-weight: 700;
   color:#6ac5b7;
 }
 
 .color-wood {
-  color:#68420d;
+  color:#7e5835;
 }
 
 
