--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -108,5 +108,56 @@
   color:#7e5835;
 }
 
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  gap: 1.25rem;
+  margin: auto;
+  padding: 0.5rem;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
+  user-select: none;
+  border-radius: 1rem;
+}
+
+.detail-box {
+    width: 90%;
+    margin: 5px auto;
+    background-color: #e5e7eb;
+    border-radius: 1rem;
+}
+
+.detail-box2 {
+    width: 90%;
+    height: 13rem;
+    margin: 20px auto;
+    background-color: #e5e7eb;
+    border-radius: 1rem;
+}
+
+.image-upload {
+  background-color: #ffffff;
+  margin: 20px auto;
+  width: 450px;
+  height: 300px;
+  border-color:#e5e7eb;
+  border-width:1px;
+}
+
+.tag-button {
+    background-color: #ffffff; 
+    color: #4b5563;
+    font-size: 0.875rem;
+    font-weight: 500;
+    margin-right: 0.75rem;
+    padding: 0.125rem 0.625rem;
+    border: 1px solid #1f2937; 
+    border-radius: 1rem;
+    font-size:20px;
+  
+}
+
 
 
