[FE] Feat : 실시간 위치 정보 기능 구현

--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -166,7 +166,6 @@
   border: 1px solid #1f2937;
   border-radius: 1rem;
   font-size: 20px;
-
 }
 
 .team-category-container {
@@ -185,7 +184,6 @@
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
   text-align: center;
-
 }
 
 .map-container {
@@ -194,11 +192,14 @@
 }
 
 .map-draw {
+  display: flex;
   width: 100%;
   height: 300px;
   margin: 5px auto;
   border-color: #e5e7eb;
   border-width: 1px;
+  overflow: hidden;
+  align-items: center;
 }
 
 .button-part {
@@ -224,7 +225,7 @@
   padding: 15px 0;
   font-size: 20px;
   display: flex;
-	justify-content: space-evenly; 
+  justify-content: space-evenly;
 }
 
 /* 모달 오버레이 스타일 */
@@ -259,7 +260,7 @@
 }
 
 .modal-profile-container {
-  padding:10px;
+  padding: 10px;
   display: flex;
   align-items: center;
 }
@@ -288,7 +289,7 @@
   height: 50px;
   border-radius: 24px;
   background-color: hsl(196, 78%, 61%);
-  color:#ffffff;
+  color: #ffffff;
   font-weight: 500;
 }
 
@@ -298,5 +299,32 @@
   border-radius: 24px;
   background-color: hsl(217, 15%, 83%);
   font-weight: 500;
+}
 
+/* MapComponent.js */
+/* 키워드 주소 검색 후 리스트 나열  */
+#result-list {
+  width: 60%;
+  height: 500px;
+  overflow: auto;
+}
+
+#result-one {
+  display: flex;
+}
+
+#pagination {
+  margin-top: 3rem;
+}
+
+#pagination a {
+  color: black;
+  font-size: 20px;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+#pagination a.on {
+  color: lightblue;
+  font-weight: bold;
 }
