--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -147,6 +147,14 @@
   border-radius: 1rem;
 }
 
+.detail-footer {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
 .image-upload {
   background-color: #ffffff;
   margin: 20px auto;
@@ -177,14 +185,16 @@
 .team-category {
   display: flex;
   flex-direction: column;
-  width: 100px;
+  width: 120px;
+  height:50px;
   gap: 1.25rem;
-  padding: 0.5rem;
+  padding: 0.55rem;
   margin: 10px 0;
   background-color: #ffffff;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
   text-align: center;
+  font-size: 24px;
   
 
 }
@@ -206,9 +216,20 @@
 }
 
 .button-part {
-  padding: 5px 15px;
-  border-radius: 24px;
+  width:120px;
+  height:45px;
+  font-size:21px;
+  border-radius: 6px;
   background-color: hsl(196, 78%, 61%);
+  color:#ffffff;
+}
+
+.button-return {
+  width:70px;
+  height:45px;
+  font-size:21px;
+  border-radius: 6px;
+  background-color: hsl(217, 15%, 83%);
   color:#ffffff;
 }
 
@@ -232,7 +253,7 @@
 	justify-content: space-evenly; 
 }
 
-/* 모달 오버레이 스타일 */
+/* 모달 오버레이 */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -243,15 +264,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1; 
 }
 
-/* 모달 콘텐츠 스타일 */
+/* 모달 내용 */
 .modal-content {
   background: rgb(255, 255, 255);
   border-radius: 5px;
   position: relative;
   width: 80%;
   max-width: 500px;
+  z-index: 2;
 }
 
 /* 닫기 버튼 스타일 */
