--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -185,7 +185,7 @@
   display: flex;
   flex-direction: column;
   width: 120px;
-  height:50px;
+  height: 50px;
   gap: 1.25rem;
   padding: 0.55rem;
   margin: 10px 0;
@@ -194,8 +194,6 @@
   border-radius: 1rem;
   text-align: center;
   font-size: 24px;
-  
-
 }
 
 .map-container {
@@ -215,21 +213,21 @@
 }
 
 .button-part {
-  width:120px;
-  height:45px;
-  font-size:21px;
+  width: 120px;
+  height: 45px;
+  font-size: 21px;
   border-radius: 6px;
   background-color: hsl(196, 78%, 61%);
-  color:#ffffff;
+  color: #ffffff;
 }
 
 .button-return {
-  width:70px;
-  height:45px;
-  font-size:21px;
+  width: 70px;
+  height: 45px;
+  font-size: 21px;
   border-radius: 6px;
   background-color: hsl(217, 15%, 83%);
-  color:#ffffff;
+  color: #ffffff;
 }
 
 .modal-header {
@@ -263,7 +261,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1; 
+  z-index: 1;
 }
 
 /* 모달 내용 */
@@ -296,10 +294,9 @@
   height: 70px;
   margin: 10px;
   border-radius: 50%;
-  border-width: 1px;  
+  border-width: 1px;
   border-color: #d1d1d1;
   overflow: hidden;
-  
 }
 
 .modal-profile-picture {
@@ -332,8 +329,9 @@
 /* MapComponent.js */
 /* 키워드 주소 검색 후 리스트 나열  */
 #result-list {
-  width: 60%;
-  height: 500px;
+  margin-left: 30px;
+  width: 40%;
+  height: 400px;
   overflow: auto;
 }
 
@@ -343,6 +341,8 @@
 
 #pagination {
   margin-top: 3rem;
+  display: flex;
+  justify-content: center;
 }
 
 #pagination a {
