--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -156,6 +156,9 @@
 }
 
 .image-upload {
+  display: flex;
+  align-items: center;   /* 세로축 중앙 정렬 */
+  justify-content: center; 
   background-color: #ffffff;
   margin: 20px auto;
   width: 450px;
@@ -214,7 +217,7 @@
 
 .button-part {
   width: 120px;
-  height: 45px;
+  height: 44px;
   font-size: 21px;
   border-radius: 6px;
   background-color: hsl(196, 78%, 61%);
@@ -275,7 +278,7 @@
 }
 
 /* 닫기 버튼 스타일 */
-.close-button {
+.modal-close-button {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -325,6 +328,136 @@
   background-color: hsl(217, 15%, 83%);
   font-weight: 500;
 }
+
+.input-text {
+  display: block;
+  width: 90%;
+  margin: 5px auto;
+  background-color: #e5e7eb;
+  border-radius: 1rem;
+}
+
+.input-textarea {
+  display: block;
+  width: 90%;
+  height: 13rem;
+  margin: 20px auto;
+  background-color: #e5e7eb;
+  border-radius: 1rem;
+}
+
+.add-container {
+  display: flex;
+  margin:  auto;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.select {
+  width: 170px;
+  margin: 5px 0;
+  height: 44px;
+  background-color: #e5e7eb;
+  border-radius: 1rem;
+}
+
+.date-picker {
+  width: 170px;
+  margin: 5px 0 5px 8px;
+  background-color: #e5e7eb;
+  border-radius: 1rem;
+}
+
+.max-person {
+  width: 80px;
+  margin: 5px 0;
+  background-color: #e5e7eb;
+  border-radius: 1rem;
+}
+
+
+
+input[type="date"]:focus:before,
+input[type="date"]:valid:before {
+  display: none;
+}
+
+input[type='date']::before {
+  content: attr(data-placeholder);
+}
+
+input[type="date"]:not(:focus):invalid {
+
+  &::-webkit-datetime-edit-text,
+  &::-webkit-datetime-edit-month-field,
+  &::-webkit-datetime-edit-day-field,
+  &::-webkit-datetime-edit-year-field {
+    -webkit-appearance: none;
+    display: none;
+  }
+}
+
+input[type="date"] {
+  position: relative;
+}
+
+input[data-placeholder]::before {
+  position: absolute;
+  width: 70%;
+  color: #a0a7b3
+}
+
+select option:disabled {
+  color: #a0a7b3;
+}
+
+.thumbnail-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  font-weight: bold;
+  font-size: 25px;
+  color: #6ac5b7;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+}
+
+.thumbnail-input[type="file"] {
+  display: none;
+}
+
+.image-preview-container {
+  position: relative;
+  display: inline-block;
+}
+
+.image-preview {
+  width: 100%; /* 원하는 크기로 설정 */
+  height: auto;
+  border-radius: 8px;
+}
+
+.remove-image-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.remove-image-button:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+
 
 /* MapComponent.js */
 /* 키워드 주소 검색 후 리스트 나열  */
