[FE] Modify : 공동구매 글 작성 페이지 디자인 수정, 사진 여러개 추가 가능하게 수정

--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -132,6 +132,10 @@
   border-radius: 1rem;
 }
 
+.shadow-set{
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .detail-box {
   width: 90%;
   margin: 5px auto;
