--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -60,15 +60,15 @@
 
 .main-slide-container {
   position: relative;
-  width: 1150px;
+  width: 800px;
   height: auto;
-  margin: 30px auto;
+  margin: 20px auto;
 }
 
 .main-slide {
   overflow: hidden;
-  width: 380px;
-  height: 271px;
+  width: 300px;
+  height: 210px;
   border-width: 1px;
 }
 
@@ -88,10 +88,13 @@
 }
 
 .latestPost-title {
+  color:#525252;
+
 }
 
 .latestPost-hit {
   margin: auto 12px auto auto;
+  color:#a5a5a5;
 }
 
 .lastestPost-list {
@@ -100,67 +103,116 @@
 }
 
 .latestPost-hr {
-  width: 94%;
+  width: 95%;
   margin: 0 auto;
   
 }
 
-.type1 {
-  color: rgb(87, 206, 200); /* 자취TIP공유의 색상 */
+/* .type1 {
+  color: rgb(87, 206, 200);
 }
 
 .type2 {
-  color: rgb(74, 101, 175); /* 질문게시판의 색상 */
+  color: rgb(255, 188, 43); 
 }
 
 .type3 {
-  color: rgb(238, 134, 120); /* 리뷰게시판의 색상 */
+  color: rgb(248, 101, 114); 
 }
 
 .type4 {
-  color: rgb(168, 118, 71); /* 도움요청의 색상 */
-}
+  color: rgb(168, 118, 71); 
+} */
 
 .main-container {
   display: flex;
   justify-content: space-between;
-  width: 1150px;
-  margin: 20px auto 30px auto;
+  width: 1200px;
+  margin: 20px auto 10px auto;
 }
 
 .main-headline {
-  font-size: 25px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .main-item {
-  width: 560px;
+  width: 380px;
   height: 320px;
   border-radius: 8px;
   border-color: rgb(196, 196, 196);
   border-width: 1px;
-  margin-top: 8px;
 }
 
 .main-item2 {
-  width: 620px;
+  width: 600px;
   height: 371px;
   border-radius: 8px;
   border-color: rgb(196, 196, 196);
   border-width: 1px;
-  margin-top: 8px;
-
 }
 
 .main-item3 {
-  width: 500px;
+  width: 570px;
   height: 371px;
   border-radius: 8px;
-  border-color: rgb(196, 196, 196);
+  border-color: rgba(0, 0, 0, .05);
+  background-color: #f5f8fb;  
   border-width: 1px;
-  margin-top: 8px;
+  padding-bottom: 10px;
+  padding:10px;
+}
+
+.main-buylist-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.main-buylist {
+  width: 130px;
+  height:170.5px;  
+  overflow: hidden;
+}
+
+.main-buylist-image {
+  position: relative;
+  width: 100%;
+  height: 130px;
 
 }
+
+.main-buylist-thumbnail {
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  border-radius: 4px;
+  border: 1px solid rgba(0,0,0,.06);
+}
+
+.main-buylist-title {
+  display: flex;
+  width: 100%;
+  height: 40.5px;
+  align-items: center;
+  justify-content:center;
+}
+
+.main-buylist-recruit {
+  position: absolute;
+	top: 1px;
+	right: 1px;
+  font-size: 16px;
+  color:#f5f8fb;
+  padding: 1px 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-top-right-radius:4px;
+}
+
+.main-nextline {
+  height:10px;
+}
+
 
 .myPage-box {
   width: 340px;
