--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -84,28 +84,27 @@
 
 .latestPost-type {
   font-weight: 700;
-  color:#000000;
+  color: #000000;
 }
 
 .latestPost-title {
-  color:#525252;
+  color: #525252;
 
 }
 
 .latestPost-hit {
   margin: auto 12px auto auto;
-  color:#a5a5a5;
+  color: #a5a5a5;
 }
 
 .lastestPost-list {
   margin: auto 0;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .latestPost-hr {
   width: 95%;
   margin: 0 auto;
-  
 }
 
 /* .type1 {
@@ -140,8 +139,10 @@
   width: 380px;
   height: 320px;
   border-radius: 8px;
-  border-color: rgb(196, 196, 196);
+  border-color: rgba(0, 0, 0, .05);
+  background-color: #f5f8fb;
   border-width: 1px;
+  padding: 10px;
 }
 
 .main-item2 {
@@ -157,10 +158,19 @@
   height: 371px;
   border-radius: 8px;
   border-color: rgba(0, 0, 0, .05);
-  background-color: #f5f8fb;  
+  background-color: #f5f8fb;
   border-width: 1px;
   padding-bottom: 10px;
-  padding:10px;
+  padding: 10px;
+}
+
+.main-item4 {
+  width: 380px;
+  height: 320px;
+  border-radius: 8px;
+  border-color: rgb(196, 196, 196);
+  border-width: 1px;
+  padding: 10px;
 }
 
 .main-buylist-container {
@@ -171,7 +181,7 @@
 
 .main-buylist {
   width: 130px;
-  height:170.5px;  
+  height: 170.5px;
   overflow: hidden;
 }
 
@@ -179,15 +189,14 @@
   position: relative;
   width: 100%;
   height: 130px;
-
 }
 
 .main-buylist-thumbnail {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 4px;
-  border: 1px solid rgba(0,0,0,.06);
+  border: 1px solid rgba(0, 0, 0, .06);
 }
 
 .main-buylist-title {
@@ -195,22 +204,119 @@
   width: 100%;
   height: 40.5px;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
 }
 
 .main-buylist-recruit {
   position: absolute;
-	top: 1px;
-	right: 1px;
-  font-size: 16px;
-  color:#f5f8fb;
+  top: 1px;
+  right: 1px;
+  font-size: 13px;
+  color: #f5f8fb;
   padding: 1px 5px;
   background-color: rgba(0, 0, 0, 0.5);
-  border-top-right-radius:4px;
+  border-top-right-radius: 4px;
 }
 
 .main-nextline {
-  height:10px;
+  height: 10px;
+}
+
+.main-nextline2 {
+  height: 0.63px;
+}
+
+.main-common-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 145px;
+}
+
+.main-marketlist {
+  width: 174px;
+  height: 145px;
+  overflow: hidden;
+}
+
+.main-marketlist-image {
+  position: relative;  
+  width: 100%;
+  height: 115px;
+}
+
+.main-marketlist-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, .06);
+}
+
+.main-marketlist-title {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+main-teamlist-container {
+  width: 100%;
+  height: 75px;
+}
+
+.main-teamlist {
+  position:relative;
+  width: 100%;
+  height: 54px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  /* background-color: #d1d1d1; */
+
+}
+
+.main-teamlist-title {
+  display: inline-block;
+  padding: 0 10px;
+  height: 30px;
+  font-size: 20px;
+  align-items: center;
+  font-weight: 400;
+  border-radius: 20px;
+  background-color: #c8ebf5;
+}
+
+.main-teamlist-content {
+  margin: 0 6px;
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.main-teamlist-number {
+  position:absolute;
+  border-radius: 20px;
+  background-color: #c8ebf5;
+  top: 8px;
+  right:0;
+  padding: 1px 8px;
+  font-size:14px;
+}
+
+.main-person-num {
+  display:inline-block;
+  object-fit: cover;
+  width:9px;
+  height:9px;
+
+}
+
+.main-buylist-title:hover,
+.main-marketlist-title:hover,
+.main-teamlist-title:hover, 
+.latestPost-title:hover {
+  text-decoration: underline;
 }
 
 
@@ -246,7 +352,7 @@
   border-radius: 1rem;
 }
 
-.shadow-set{
+.shadow-set {
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
