--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -89,7 +89,6 @@
 
 .latestPost-title {
   color: #525252;
-
 }
 
 .latestPost-hit {
@@ -139,7 +138,7 @@
   width: 380px;
   height: 320px;
   border-radius: 8px;
-  border-color: rgba(0, 0, 0, .05);
+  border-color: rgba(0, 0, 0, 0.05);
   background-color: #f5f8fb;
   border-width: 1px;
   padding: 10px;
@@ -157,7 +156,7 @@
   width: 570px;
   height: 371px;
   border-radius: 8px;
-  border-color: rgba(0, 0, 0, .05);
+  border-color: rgba(0, 0, 0, 0.05);
   background-color: #f5f8fb;
   border-width: 1px;
   padding-bottom: 10px;
@@ -196,7 +195,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, .06);
+  border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .main-buylist-title {
@@ -240,7 +239,7 @@
 }
 
 .main-marketlist-image {
-  position: relative;  
+  position: relative;
   width: 100%;
   height: 115px;
 }
@@ -250,7 +249,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, .06);
+  border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .main-marketlist-title {
@@ -268,13 +267,12 @@ main-teamlist-container {
 }
 
 .main-teamlist {
-  position:relative;
+  position: relative;
   width: 100%;
   height: 54px;
   overflow: hidden;
   margin-bottom: 10px;
   /* background-color: #d1d1d1; */
-
 }
 
 .main-teamlist-title {
@@ -295,30 +293,28 @@ main-teamlist-container {
 }
 
 .main-teamlist-number {
-  position:absolute;
+  position: absolute;
   border-radius: 20px;
   background-color: #c8ebf5;
   top: 8px;
-  right:0;
+  right: 0;
   padding: 1px 8px;
-  font-size:14px;
+  font-size: 14px;
 }
 
 .main-person-num {
-  display:inline-block;
+  display: inline-block;
   object-fit: cover;
-  width:9px;
-  height:9px;
-
+  width: 9px;
+  height: 9px;
 }
 
 .main-buylist-title:hover,
 .main-marketlist-title:hover,
-.main-teamlist-title:hover, 
+.main-teamlist-title:hover,
 .latestPost-title:hover {
   text-decoration: underline;
 }
-
 
 .myPage-box {
   width: 340px;
@@ -489,7 +485,7 @@ main-teamlist-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 50; /* 최상단에 표시 */
 }
 
 /* 모달 내용 */
@@ -601,10 +597,8 @@ main-teamlist-container {
   border-radius: 1rem;
 }
 
-
-
-input[type="date"]:focus:before,
-input[type="date"]:valid:before {
+input[type='date']:focus:before,
+input[type='date']:valid:before {
   display: none;
 }
 
@@ -612,8 +606,7 @@ input[type='date']::before {
   content: attr(data-placeholder);
 }
 
-input[type="date"]:not(:focus):invalid {
-
+input[type='date']:not(:focus):invalid {
   &::-webkit-datetime-edit-text,
   &::-webkit-datetime-edit-month-field,
   &::-webkit-datetime-edit-day-field,
@@ -623,14 +616,14 @@ input[type="date"]:not(:focus):invalid {
   }
 }
 
-input[type="date"] {
+input[type='date'] {
   position: relative;
 }
 
 input[data-placeholder]::before {
   position: absolute;
   width: 70%;
-  color: #a0a7b3
+  color: #a0a7b3;
 }
 
 select option:disabled {
@@ -650,7 +643,7 @@ select option:disabled {
   text-align: center;
 }
 
-.thumbnail-input[type="file"] {
+.thumbnail-input[type='file'] {
   display: none;
 }
 
@@ -682,8 +675,6 @@ select option:disabled {
 .remove-image-button:hover {
   background-color: rgba(0, 0, 0, 0.7);
 }
-
-
 
 /* MapComponent.js */
 /* 키워드 주소 검색 후 리스트 나열  */
