--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -106,21 +106,38 @@
   margin: 0 auto;
 }
 
-/* .type1 {
-  color: rgb(87, 206, 200);
+.list-button-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
-.type2 {
-  color: rgb(255, 188, 43); 
+.list-tagbtn {
+  border: 1px solid rgb(0, 0, 0);
+  font-size: 20px;
+  border-radius: 24px;  
+  padding: 2px 10px;
+  background-color: #ffffff; /* bg-neutral-100 */
+  border-color: #d4d4d4; /* border-neutral-300 */
 }
 
-.type3 {
-  color: rgb(248, 101, 114); 
+.list-tagbtn:hover {
+  filter: brightness(0.85); /* 밝기 85%로 조정 */
+
+
 }
 
-.type4 {
-  color: rgb(168, 118, 71); 
-} */
+.tag-btn-active {
+  background-color: #bfdbfe; /* bg-blue-100 */
+  border-color: #6094cf; /* border-blue-300 */
+
+}
+
+.tag-btn-active:hover {
+  filter: brightness(0.85); /* 밝기 85%로 조정 */
+
+}
 
 .main-container {
   display: flex;
