--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -121,10 +121,10 @@
 .list-tagbtn {
   border: 1px solid rgb(0, 0, 0);
   font-size: 20px;
-  border-radius: 24px;  
+  border-radius: 24px;
   padding: 2px 10px;
-  background-color: #ffffff; 
-  border-color: #d4d4d4; 
+  background-color: #ffffff;
+  border-color: #d4d4d4;
 }
 
 .list-tagbtn:hover {
@@ -697,9 +697,10 @@ select option:disabled {
 /* MapComponent.js */
 /* 키워드 주소 검색 후 리스트 나열  */
 #result-list {
+  margin-top: 30px;
   margin-left: 30px;
-  width: 40%;
-  height: 400px;
+  width: 90%;
+  height: 500px;
   overflow: auto;
 }
 
