--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -1,43 +1,52 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
+
 @font-face {
   font-family: "KakaoBig";
   font-style: normal;
-  font-weight: Regular;
+  font-weight: 400;
   src: url("./resources/fonts/KakaoBig-Regular.woff2");
 }
 
 @font-face {
   font-family: "KakaoBig";
   font-style: normal;
-  font-weight: Bold;
+  font-weight: 700;
   src: url("./resources/fonts/KakaoBig-Bold.woff2");
 }
 
 @font-face {
   font-family: "KakaoSmall";
   font-style: normal;
-  font-weight: 300; /* Light */
+  font-weight: 300;
+  /* Light */
   src: url("./resources/fonts/KakaoSmall-Light.woff2");
 }
 
 @font-face {
   font-family: "KakaoSmall";
   font-style: normal;
-  font-weight: 400; /* Regular */
+  font-weight: 400;
+  /* Regular */
   src: url("./resources/fonts/KakaoSmall-Regular.woff2");
 }
 
 @font-face {
   font-family: "KakaoSmall";
   font-style: normal;
-  font-weight: 700; /* Bold */
+  font-weight: 700;
+  /* Bold */
   src: url("./resources/fonts/KakaoSmall-Bold.woff2");
 }
 
 
 * {
-  font-family: "KakaoBig";
+  font-family: "KakaoBig";  
+}
+
+.bg-color {
+  background-color: rgb(247, 248, 249);
+
 }
 
 .App {
@@ -80,39 +89,45 @@
   }
 }
 
-.bor-bot {
-  border-bottom: 1px solid var(--colorBg1);
+.text-center {
+  text-align: center;
+  align-items: center;
+
 }
+
 
 /* 홈 화면 상단 */
 .main-container-top {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 
 .main-image {
   width: auto;
   height: auto;
   margin: 0 auto;
-  border-radius: 50px;
 }
 
 .main-image-text {
   position: absolute;
   color: #ffffff;
-  font-size: 65px;
+  font-size: 47px;
 }
 
-.KakaoSmall-Light {
+.KakaoSmall {
   font-family: "KakaoSmall";
-  font-weight: 300;
 }
 
-.KakaoSmall-Bold {
-  font-family: "KakaoSmall";
+.main-title {
+  font-size: 95px;
+  line-height: 0;
   font-weight: 700;
+}
+
+.main-subtitle {
+  font-size: 47px;
+  font-weight: 400;
 }
 
 
@@ -127,9 +142,9 @@
 
 .main-slide-container {
   position: relative;
-  width: 650px;
+  width: 1550px;
   height: auto;
-  margin: 20px auto;
+  margin: 0px auto;
 }
 
 .main-slide {
@@ -143,35 +158,35 @@
   margin: 0 -20px;
 }
 
-.weather-container {
-  width: 500px;
-  height: 100%;
-}
+
 
 .latestPost-container {
   display: flex;
-  font-size: 16px;
-  padding: 6px;
+  font-size: 20px;
+  padding: 9.3px;
+  width: 100%;
+  height: 10%;
 }
 
 .latestPost-type {
+
   font-weight: 700;
-  color: #000000;
+  color: #50979c;
 }
 
 .latestPost-title {
-  color: #525252;
+  display: block;
+  color: #414141;
+  
 }
 
 .latestPost-hit {
+  display: block;
   margin: auto 12px auto auto;
-  color: #a5a5a5;
+  color: #d3d3d3;
 }
 
-.lastestPost-list {
-  margin: auto 0;
-  overflow: hidden;
-}
+
 
 .latestPost-hr {
   width: 95%;
@@ -207,19 +222,111 @@
   filter: brightness(0.85);
 }
 
+.background-container {
+  width: 100%;
+  height: 700px;
+}
+
 .main-container {
   display: flex;
-  justify-content: space-between;
-  width: 1200px;
-  margin: 20px auto 10px auto;
+  justify-content: space-around;
+  width: 80%;
+  margin: 25px auto;
+}
+
+.vertical-line {
+  position: absolute;
+  height: 1280px;
+  width: 2px;
+  border-left: 1px dashed #bbb;
+  border-right: 1px dashed #fff;
+  top: 1120px;
+  left: 50%;
+  z-index: 49;
 }
 
 .main-headline {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 500;
+  text-align: center;
+}
+
+.main-box {
+  width: 50%;
+  height: 600px;
+  margin: auto;
+}
+
+.main-textbox {
+  display: table;
+  width: 50%;
+  height: 600px;
+}
+
+.desc-title {
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.desc-tag {
+  font-size:17px;
+  color:#7e5835;
+  margin: 5px 0;
+  
+}
+
+.desc-content {
+  display: inline-block;
+  width: 100%;
+  font-size: 30px;
+}
+
+
+.main-desc {
+  display: inline-block;
+  width:100%;
+  margin: auto;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  /* top, bottom */
+}
+
+.main-comm {
+  width: 670px;
+  height: 500px;
+  border-radius: 4px;
+  border-color: rgba(0, 0, 0, .06);
+  border-width: 1px;
+  background-color: #ffffff;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
+  padding: 2px;
+  margin: 50px auto;
+}
+
+.main-weather {
+  width: 550px;
+  height: 500px;
+  background-color: #f5f8fb;
+  border-radius: 4px;
+  border-color: rgba(0, 0, 0, .06);
+  border-width: 1px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
+  padding: 2px;
 }
 
 .main-item {
+  width: 460px;
+  height: 560px;
+  padding: 10px;
+  border-radius: 4px;
+  border-color: rgba(0, 0, 0, .09);
+  border-width: 1px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
+}
+
+.main-item2 {
   width: 380px;
   height: 320px;
   border-radius: 8px;
@@ -227,21 +334,17 @@
   background-color: #f5f8fb;
   border-width: 1px;
   padding: 10px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
+
 }
 
-.main-item2 {
-  width: 600px;
-  height: 371px;
-  border-radius: 8px;
-  border-color: rgb(196, 196, 196);
-  border-width: 1px;
-}
+
 
 .main-item3 {
-  width: 570px;
-  height: 371px;
-  border-radius: 8px;
-  border-color: rgba(0, 0, 0, 0.05);
+  width: 500px;
+  height: 550px;
+  border-radius: 36px;
+  border-color: rgb(196, 196, 196);
   background-color: #f5f8fb;
   border-width: 1px;
   padding-bottom: 10px;
@@ -264,38 +367,45 @@
 }
 
 .main-buylist {
-  width: 130px;
-  height: 170.5px;
+  width: 32%;
   overflow: hidden;
+  
 }
 
 .main-buylist-image {
   position: relative;
   width: 100%;
   height: 130px;
+  padding: 13px;
 }
 
 .main-buylist-thumbnail {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .main-buylist-title {
-  display: flex;
+  display: -webkit-box;
   width: 100%;
-  height: 40.5px;
+  height: 50px;
+  font-size:15px;
   align-items: center;
-  justify-content: center;
+  vertical-align: middle;
+  text-align: center;
+  font-family: "KakaoSmall";
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
+
 
 .main-buylist-recruit {
   position: absolute;
   top: 1px;
   right: 1px;
-  font-size: 13px;
+  font-size: 14px;
   color: #f5f8fb;
   padding: 1px 5px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -306,27 +416,27 @@
   height: 10px;
 }
 
-.main-nextline2 {
+/* .main-nextline2 {
   height: 0.63px;
-}
+} */
 
 .main-common-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 145px;
+  height: 33%;
 }
 
 .main-marketlist {
-  width: 174px;
-  height: 145px;
-  overflow: hidden;
+  width: 49%;
+  height: 100%;
 }
 
 .main-marketlist-image {
   position: relative;
   width: 100%;
-  height: 115px;
+  height: 85%;
+  padding: 14px;
 }
 
 .main-marketlist-thumbnail {
@@ -338,53 +448,62 @@
 }
 
 .main-marketlist-title {
-  display: flex;
   width: 100%;
-  height: 30px;
-  font-size: 14px;
+  height: 15%;
+  font-size: 15px;
   align-items: center;
   justify-content: center;
+  white-space: nowrap;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-main-teamlist-container {
-  width: 100%;
-  height: 75px;
-}
 
-.main-teamlist {
+.main-teamlist-container {
   position: relative;
+  padding: 9.3px;
   width: 100%;
-  height: 54px;
+  height: 16%;
+}
+
+/* .main-teamlist {
+  display: flex;
+  width: 100%;
+  height: 5%;
   overflow: hidden;
   margin-bottom: 10px;
-  /* background-color: #d1d1d1; */
-}
+  padding:10px;
+
+  background-color: #d1d1d1;
+} */
 
 .main-teamlist-title {
   display: inline-block;
-  padding: 0 10px;
-  height: 30px;
-  font-size: 20px;
-  align-items: center;
+  font-size: 21px;
   font-weight: 400;
   border-radius: 20px;
-  background-color: #c8ebf5;
+  background-color: #d2f0f8;
+  padding: 4px 10px;
+  margin-bottom: 1px;
 }
 
 .main-teamlist-content {
   margin: 0 6px;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 15px;
+  font-family: "KakaoSmall";
 }
 
 .main-teamlist-number {
   position: absolute;
   border-radius: 20px;
-  background-color: #c8ebf5;
-  top: 8px;
-  right: 0;
-  padding: 1px 8px;
-  font-size: 14px;
+  background-color: #d2f0f8;
+  margin: 0 0 auto 0;
+  padding: 2px 8px;
+  font-size: 17px;
+  top:30%;
+  right: 3%;
 }
 
 .main-person-num {
