[FE] Modify : 마이페이지 전체 틀 + 채팅방 디자인 변경

--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -725,3 +725,24 @@ select option:disabled {
   color: lightblue;
   font-weight: bold;
 }
+
+/* =======스크롤바 관련========= */
+
+/* 기본적으로 숨김 */
+.no-scrollbar::-webkit-scrollbar {
+  width: 0;
+  background: transparent; /* Chrome, Safari, Opera */
+}
+
+/* 마우스 올리면 나타남 */
+.no-scrollbar:hover::-webkit-scrollbar {
+  width: 8px;
+}
+.no-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3); /* 스크롤바 색상 */
+  border-radius: 10px;
+}
+
+.round-container > * {
+  border-radius: 1.5rem; /* rounded-3xl의 실제 CSS 값 */
+}
