--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -236,7 +236,7 @@
 
 .vertical-line {
   position: absolute;
-  height: 1280px;
+  height: 1450px;
   width: 2px;
   border-left: 1px dashed #bbb;
   border-right: 1px dashed #fff;
@@ -305,17 +305,6 @@
   margin: 50px auto;
 }
 
-.main-weather {
-  width: 550px;
-  height: 500px;
-  background-color: #f5f8fb;
-  border-radius: 4px;
-  border-color: rgba(0, 0, 0, .06);
-  border-width: 1px;
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
-  padding: 2px;
-}
-
 .main-item {
   width: 460px;
   height: 560px;
@@ -324,40 +313,7 @@
   border-color: rgba(0, 0, 0, .09);
   border-width: 1px;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
-}
-
-.main-item2 {
-  width: 380px;
-  height: 320px;
-  border-radius: 8px;
-  border-color: rgba(0, 0, 0, 0.05);
-  background-color: #f5f8fb;
-  border-width: 1px;
-  padding: 10px;
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .1);
-
-}
-
-
-
-.main-item3 {
-  width: 500px;
-  height: 550px;
-  border-radius: 36px;
-  border-color: rgb(196, 196, 196);
-  background-color: #f5f8fb;
-  border-width: 1px;
-  padding-bottom: 10px;
-  padding: 10px;
-}
-
-.main-item4 {
-  width: 380px;
-  height: 320px;
-  border-radius: 8px;
-  border-color: rgb(196, 196, 196);
-  border-width: 1px;
-  padding: 10px;
+  background-color: #ffffff;
 }
 
 .main-buylist-container {
@@ -376,7 +332,7 @@
   position: relative;
   width: 100%;
   height: 130px;
-  padding: 13px;
+  padding: 10px;
 }
 
 .main-buylist-thumbnail {
@@ -392,7 +348,6 @@
   height: 50px;
   font-size:15px;
   align-items: center;
-  vertical-align: middle;
   text-align: center;
   font-family: "KakaoSmall";
   overflow: hidden;
@@ -403,22 +358,26 @@
 
 .main-buylist-recruit {
   position: absolute;
-  top: 1px;
-  right: 1px;
+  top: 11px;
+  right: 11px;
   font-size: 14px;
   color: #f5f8fb;
   padding: 1px 5px;
   background-color: rgba(0, 0, 0, 0.5);
-  border-top-right-radius: 4px;
+  /* border-top-right-radius: 1px; */
 }
 
-.main-nextline {
-  height: 10px;
-}
 
 /* .main-nextline2 {
   height: 0.63px;
 } */
+
+.main-comm-title {
+  width:60%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .main-common-container {
   display: flex;
@@ -433,10 +392,9 @@
 }
 
 .main-marketlist-image {
-  position: relative;
   width: 100%;
   height: 85%;
-  padding: 14px;
+  padding: 18px;
 }
 
 .main-marketlist-thumbnail {
@@ -447,16 +405,27 @@
   border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
-.main-marketlist-title {
+.main-marketlist-titlebox {
   width: 100%;
-  height: 15%;
   font-size: 15px;
-  align-items: center;
-  justify-content: center;
   white-space: nowrap;
-  text-align: center;
   overflow: hidden;
+  text-align: center;
   text-overflow: ellipsis;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.main-marketlist-title {
+
+}
+
+.main-marketlist-category {
+  font-size: 13px;
+  background-color: #c9ecd9;
+  border-radius: 16px;
+  padding: 0px 8px;
+  margin-right: 5px;
 }
 
 
@@ -513,6 +482,77 @@
   height: 9px;
 }
 
+.main-roomlist-container {
+  width: 100%;
+  height: 100%;
+}
+
+.main-roomlist {
+  display: flex;
+  width:100%;
+  height:180px;
+  align-items: center;
+  padding-right: 18px;
+}
+
+.main-roomlist-image {
+  width: 90%;
+  height: 100%;
+  padding: 20px;
+}
+
+.main-roomlist-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+.main-roomlist-content {
+  width: 60%;
+}
+
+.main-roomlist-title {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin:0 5px 5px 2px;
+}
+
+
+
+.main-roomlist-optionbox {
+  width: 100%;
+  height: 15%;
+  font-size: 14px;
+  white-space: nowrap;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 5px;
+}
+
+.main-roomlist-option {
+  font-size: 14px;
+  background-color: #c9ecd9;
+  border-radius: 16px;
+  padding: 0px 8px;
+  margin-right: 5px;
+}
+
+.main-roomlist-charge {
+  font-size: 16px;
+  background-color: #c9ecd9;
+  border-radius: 16px;
+  padding: 0px 8px;
+  margin-right: 5px;
+}
+
+.main-roomlist-title:hover,
 .main-buylist-title:hover,
 .main-marketlist-title:hover,
 .main-teamlist-title:hover,
