--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 
 
 @font-face {
@@ -104,6 +105,7 @@
 }
 
 .main-image {
+  position: relative;
   width: auto;
   height: auto;
   margin: 0 auto;
@@ -113,6 +115,50 @@
   position: absolute;
   color: #ffffff;
   font-size: 47px;
+  top:40%;
+}
+
+.weather-container {
+  width:455.86px;
+  position: absolute;
+  top: 56%;
+  color:#ffffff;
+}
+
+.weather-font {
+  font-family: "Noto Sans KR", sans-serif;
+} 
+
+.weather-head {
+  display: flex;
+  width:100%;
+	flex-direction: row-reverse;
+  font-size:20px;
+}
+
+.weather-hr {
+  height:10px;
+  margin: 5px 0;
+}
+
+.weather-icon {
+  position: absolute;
+  left:-13px;
+  top:-10px;
+}
+
+.weather-temp {
+  position: absolute;
+  left: 80px;
+  top:-1px;
+  font-family: "Noto Sans KR", sans-serif;
+
+}
+
+.weather-marker {
+  margin-top: 5px;
+  width:35px;
+  height:35px;
 }
 
 .KakaoSmall {
@@ -177,7 +223,9 @@
 .latestPost-title {
   display: block;
   color: #414141;
-
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .latestPost-hit {
@@ -385,10 +433,7 @@
 } */
 
 .main-comm-title {
-  width: 60%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  width: 62%;
 }
 
 .main-common-container {
@@ -448,7 +493,7 @@
 }
 
 .main-teamlist-image {
-  width: 150px;
+  width: 117.41px;
   height: 100%;
   padding: 2px;
 }
@@ -457,12 +502,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .main-teamlist-contentbox {
-  width: 55%;
+  width: 60%;
   height: 100%;
   margin-left: 15px;
   padding: 3px 0 3px 0;
@@ -471,8 +516,8 @@
 .main-teamlist-title {
   display: inline-block;
   font-size: 20px;
-  border-radius: 18px;
-  background-color: #d2f0f8;
+  border-radius: 6px;
+  background-color: #dcf2f8;
   padding: 4px 10px;
   margin-bottom: 1px;
   font-weight: 700;
@@ -527,7 +572,7 @@
 .main-roomlist-image {
   width: 90%;
   height: 100%;
-  padding: 20px;
+  padding: 18px;
 }
 
 .main-roomlist-thumbnail {
@@ -583,6 +628,8 @@
 .main-buylist-title:hover,
 .main-marketlist-title:hover,
 .main-teamlist-title:hover,
+.main-teamlist-content:hover,
+
 .latestPost-title:hover {
   text-decoration: underline;
 }
