--- a/front/lab/src/App.css
+++ b/front/lab/src/App.css
@@ -104,8 +104,12 @@
   justify-content: center;
 }
 
-.main-image {
+.main-image-box {
   position: relative;
+  margin: 0 auto;
+}
+
+.main-image {
   width: auto;
   height: auto;
   margin: 0 auto;
@@ -115,12 +119,15 @@
   position: absolute;
   color: #ffffff;
   font-size: 47px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .weather-container {
   position: absolute;
-  top: 37%;
-  left:57%;
+  top: 1%;
+  right:1%;
   color:#ffffff;
 }
 
